# clip_verse

./: README.md  package-lock.json  package.json  vite.config.ts
docs/: development.md  todos.md
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  monitor.rs
src-tauri/src/db/: mod.rs
src-tauri/src/utils/: time.rs
src/components/common/: AppToaster.tsx
src/components/layout/: AppMenu.tsx  AppShell.tsx
src/components/records/: RecordCard.tsx  RecordMasonry.tsx
src/components/ui/: provider.tsx
src/lib/: time.ts
src/pages/: HomePage.tsx  SettingsPage.tsx
src/types/: clipboard.ts
