[package]
name = "clip_verse"
version = "0.1.0"
description = "剪贴板历史管理桌面应用"
authors = ["clip_verse"]
edition = "2021"

[lib]
name = "clip_verse_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.31", features = ["bundled"] }
thiserror = "1"
arboard = { version = "3", features = ["wayland-data-control"] }
sha2 = "0.10"
image = { version = "0.25", default-features = false, features = ["png"] }
clipboard-win = "5"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["shellapi", "winuser", "commctrl"] }
image = "0.25"
